create github pages

--- a/doug.html
+++ b/doug.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cv+X9J8NJIJO4LeXxUFQej/39m/0azN8Y8cjl/lhIw3JJqiDBXz5jl9SxvMfMiv6LQiJgEJ82NDrDTzEnZNIzQxz78nMDKp3WghFCb1HssPZ6qjXrcK1Q+YrSqyF5ZYl">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eJGpelAFYc8rTgpCNyrPRkNkxYuFcn2E9a+nJ0Nf6TNFfzjNwNVwD+abr+Dwk0XYa1uklWUh8WZf/BOMx6ow7MxMWEWqbyRI5dMSS8FN/CIDUqgRxuF+G9XPDpxolQxV">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
