create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KztkPaVsZErvrZ3mWK0PzL53ykiKRtIEyT3RPwhAIQRtBTIvN3IwqPSCE3QFXDcklZ/SQMCFpaQxDnAvad2Z+q7kzFC6sWz6GkNZbS5DmeL5zOKJWMywHZXgq1iJTXzJ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Am2jTJYtb1bpQrM+O313UCHk9dM/knRZa1GTRbL86+s7wGKwRSroulg4db7bPm51lHLFQNxhIYAlH0411W14AQ0m6n+WPajOfQit91sUlopVDsPvRYg4XxcH113RlE8R">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
