--- a/joe.html
+++ b/joe.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wUykBvEaV8ogcCuXoZxXwiP/hreWf2Wr0koAjeLCYcR3+5/jJ39N88U2ORI1vwyiXYec9zshGQX56Ikpj17JeVu51nO8i+oGEgOUK+hU5ohWIh09ciAjz+PQg2qRrzxS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K2HqG6GLW79btn6USvOKxQrwKKzBqkjJsHhhLJPIdvn7NSxFHW5mjbVL5jgFfWDBLjkqjrxUa5jXw45lG+1t3eOiyexcS4ChBx77fqg3Wb1oXl4QTms6yHf0CUllN5PZ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
