--- a/ben.html
+++ b/ben.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SB2VB0JeUAQ022Ai8VGivwpxzgeiWc63Mf0OYjgKKfMSBatzKVbHIVRFjvf7Uox1Vd3Tw3lTdr+q+cT1icoioKhXZHBAisYjvWThoaDH1BIq0aLn4UlIrIclnanvY0iD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s66WOB2fDothp6kBoL1+5kmqYhMz3cluDCGHzSvI7r1UiJ1jDMD4N5a/ZmcciCzmNMjV1Q6yCjj/WBHfOghugQ+v3lvrRIgZAVKD96C6UGvk+1O9pc9QMCnllN+zvcQu">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
