--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ly6r9Dyt/9A8ub/PYo6QoML0q1jNVaJ4t++9Q+JJzzqhWwB0rKmpivcrgDkSIqWNNpAWQKHF+TRj1F11aV5LNhvfPtteAtcAnD6MLMOwhhgiTH4PD1PGXGmKt+/toOmj">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4Ln+CjY5m2QiZRbYF8r9XIMl7fmZDM6/s2r9yT1iYdcXN+/3anXMI9KhyoJu2rYtyyDNz/mFqdUjisO40aDczhq5c+aaniTpWmU9eE4VBChutbfEokwLyEPmRiGDrnwt">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
