--- a/newsletter.html
+++ b/newsletter.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
