create github pages

--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -137,7 +137,7 @@
 </strong></h1>
                 <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-5"><strong>South Central Michigan Barn </strong><br><strong>&amp; Farmstead Survey Project</strong></h3>
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-4">The Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project brings together local youth and adults to document Michigan's traditional barn structures. We want to increase youth awareness of the rich agricultural history of the area and preserve it for generations to come.
+                    <p class="mbr-text mbr-fonts-style display-7">The Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project brings together local youth and adults to document Michigan's traditional barn structures. We want to increase youth awareness of the rich agricultural history of the area and preserve it for generations to come.
 <br>
 <br>Barrett Insurance is working on this survey in conjunction with the Michigan Barn Preservation Network and Michigan State University. The survey will be available at the Michigan State University Museum. &nbsp;<br><br>If you would like to get involved with the Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project, call Barrett Insurance at (517) 849-1000.<br></p>
                 </div>
@@ -165,7 +165,7 @@
                     Student of The Week</strong></h1>
                 <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-5"><strong>Award of Excellence</strong></h3>
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-4">Congratulations to this week's Barrett Insurance Student of the Week Award of Excellence recipient, Zach Wilson! 
+                    <p class="mbr-text mbr-fonts-style display-7">Congratulations to this week's Barrett Insurance Student of the Week Award of Excellence recipient, Zach Wilson! 
 <br>
 <br>Zach is a sophomore at Reading High School. He remains active in the St. Paul's Ability Resource Center (SPARC) Program in Hillsdale. 
 <br>
