--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xrQRKwcR44SfmjwBJwKwzRz81mdPRZSp/OY0IYCfwQVCaLWiEmL8RHcBbBik1uNwHeJ0GbGNACQ3GEKN75CRzmgbp1rH9QOI9r/F1S/fM2rlVX+K9nJmuin1rcrodxqH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="flNyIHPxfuttID+AfKtRXsmLHNx2DB/wMb3dcoe+KB5x/t0tZNUPLmAAezHVSk9NZbi1da1vxnl93Sos8A0aS+QBV0po8PKAtaS/yQvwk9wWWHczj00nfXvoYo48NC9L">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
