--- a/doug.html
+++ b/doug.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zOdDOsslLzuyuCAgqwYghVH5Y/6wmyNUdzj8jER/epqnGealqss4MxmEctok1bglQV7tYG7w2TEvQF2+6ZSNf6lpFqVMF9sG6NgNskCZ2ZqUdbieYfFmcOnY97AHEpIP">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OtdVJC5Hkc6wJX71DGsJKNzSam+0lGLs8I0St2FDKW2WrHSZ7drpUdarUDjaqsgDALyKbTMmkJ4Fr8NDCNgwU2QVOtz20Lo79ybK+HC2pviksUag8EMnrbPvvF87OFBQ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
