--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NxSouDunMI0SQyHpx7SJfzpez2iiZha33yZnjl3wadZn1HUuPfx2XHTm5ZHCuDDhnQqOI6GTfla88BYY5ryBryGnn6EOtEEvREVKlDTMvj6Frab5WwLFYOmoxWULV1Nt">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hPj5q2n3ulcpg2XUZU+L67KWbu1J+QQsz9AEJ7bA4oB5CcefuQ9OWEoYwAVr8BU5N1lYz/kgII/KvDqGCfwJEH2w2nBCars2QC5x3h8SiggmRIgslnIaSiTn9bVeoX65">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
