create github pages

--- a/ben.html
+++ b/ben.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yed0/LhKk0gkBBxtmybVRk46obx6D7xKs73hjL0X+xSZO6ktCmmw+Em+gGgIFqn92X+Qp8QFWmdPK2blLgLlcUjSMSNRumPeuH6zCI0vlXyLxxu3FzpPTkXhXJH5Rf6t">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0QoFdld2GjFBNPJNohP7IoWn6PKHSAHRhvRMKY0cfW2MYJiBxJhypdLAjWuB5ixFwOsmpFnHLurrWSmgY1jop61rOPvm2bdTajDeI3IQwsdmxgzFD656Tt2+G4inn4DF">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
