--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -111,7 +111,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -127,7 +127,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oZnjDXFxreBBAjj41PRQ7ZENriLrR/gpmZdkYWMCaalCkRVoCX/BRpctr/6bZ6Mkr6YinhMCA4Or/ZCXPqN/QE9YUNBj+v/3GZr+WbNuDLLqO7JvoCKCYQnOdJ7pYd9O">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VkmGQ8TEIE1UIHlF57fsjchyCH4D9MPD+FDHsN0uMMqtPA5+afd0dYLAe3ue8GJC81V/eUa9/8mYgYb9tGAhR4vNKjy/aTQnw1BtIE0AM/6EF8iUjpRygSny0b60st1P">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
