--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tqRaDynt6CnG49HNjEnaoaiTTWdCjkmqmRDJOEVcaMEgFvUjeV6ODgSSXSun1W5b5b2vSg2vR/5vLkJuU6VCjjAxxLXggnwaQau6BIf8k9ex2wc5JQddrzSkknlvAUtD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EsCyw4vvgbCcksHb0tjciF4Jw1qSA9iHbM00vDaQ4ia0+Thd2ZnBiksR6DLh95N5HAaMDgfcP1Wugq6tAZdWvE7YGqYX23O/4DtT4d2XQS4EsDlZVIamdXrh/fEpapWq">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
