--- a/newsletter.html
+++ b/newsletter.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
