--- a/becky.html
+++ b/becky.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Jx6J/z29Y68R1yuxdJTyE9b9IQj13YeEF0SKdy/+LT1wn2f/SRoSmMeQ5drZWAedq2W7D1rcE9oIHkmym9z9C0oE2G4MlpmIGK6j8qqOspAVQsvmjCd44/KtdopUv0rq">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QMKwdiRWIJbEMeKwMQ735ANxCbMLwBVvooGK8QY+pkQykhU0lJIWZizxN1x09O731XyjO9J6OfOJ6tQLNtnsOINX4Dhq0ffTirlMj/drD+/2L73NOlDNqYtytwKXNjB9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
