--- a/ben.html
+++ b/ben.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G52EWjEuhds1mzTpb9X9BO8+5pyPAU3W63ZU1k7U/YQ+nerLGmOP7jsJxyzfvLytLqZshkvD3RAn2xM00foONPbxB7L99s9HOv5Tn8mOPx82X49XCGa1w6I5+4DJe0U2">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6HXIgz19WiQ8zFWkNQkf8HEmsiKTxzYItdBAg0u5IR2MbzJ4vw7At90n9eKfo/FahF4XNTmy50lxYRsOW5otaXaMT58Qy8JfCzrKcyi5Uumv+szQGZ4aLl6jyj6tODXx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
