--- a/doug.html
+++ b/doug.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VC7in/iElHD8gTvtcmBxXSG6MytCKpfIq6IKXVW/Eu5lQzq/HMmzZ3sohaWMhzWrToAsb9ewAPbI+1NhF51/ladKT4KCOHKJgKd0ADirJD6tEMUpLXr1AoKbibM7XmEZ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QbMb1y6qBsA5SQs/UEX9gg5q11ELdX8h1KOrVfOjawH4rd244mpD+EW+rpXQnrhJco4Mni+js2VEUwKK8h0bkYaWw8SVKMaS5t0hCwUSrAtT2MuHNLiDOUOers2d39Ii">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
