--- a/ben.html
+++ b/ben.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6HXIgz19WiQ8zFWkNQkf8HEmsiKTxzYItdBAg0u5IR2MbzJ4vw7At90n9eKfo/FahF4XNTmy50lxYRsOW5otaXaMT58Qy8JfCzrKcyi5Uumv+szQGZ4aLl6jyj6tODXx">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zVf5rUgJ9e4kilHDbClJEHnAeBGtEVPfFh1s4DMvUPI6TkMysxEtzX0iwJYvDDnpumg9zag2uOL1CAAmvR5CP5zQ5FRGZgMxSq3SAwuUyaLOokmk/y2/EOGJv32UPyfl">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
