--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bg9Ee4LBh6jk7KOpZDw/QF97avbWWrrq+DjN3AylxLhuDbr7zFJBJaPSVk5HAswaqPsIvwPXe4mfnMHGkksolaab5CMgl9QPn2LuzhqUz8ry95R9q8wJVvUusLeSnGGO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TYiedTeGL+akYAGTOeivzuyADSi+PeeeEsTzYz5eapNe6iWQv+4y8pDfCr7mLcNjx0g1Bh+xJzk78Tj2jVE/5SdslmMT4+T8UrSrNiMnj4FMKZH0Tfm2btGHDwsaR9R3">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
